Aws swarm/leader (#74)
* chore: adding necessary vpc prompt

* chore: adding vpc to the combined generator

* chore: removed some resources from list

* chore: cleaning

* chore: correcting aws swarm

* chore: removed projectName option

* chore: adding aws-ebs to combined generator

* chore: prompting for available zone

* chore: fix generator props

* chore: update

* chore: addgin aws-eip to combined generator

* chore: removed options

* chore: addgin aws-eip to combined generator

* chore: adding aws-resources to combined generator

* chore: removing double

* chore: removed options

* chore: adding route53 to combined generator

* chore: removed option

* chore: adding aws-security group to combined generator

* chore: remove option

* chore: adding ansible-aws to combined generator

* chore: updated

* chore: adding aws-swarm-leader to combined generator

* chore: updating generator

* chore: updating config file

* chore: adding swarm leader to combined generator

* chore: update prompt

* chore: changed default value

* chore: updated

* chore: removed suffix correcting package.json

* chore: correcting

---------

Co-authored-by: Anthony Phothirath <anthony.phothirath@hotmail.com>
Co-authored-by: Olivier Pichon <op@dzango.com>

--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
@@ -1,11 +1,11 @@
 config:
-  <%= projectName %>:ami: ami-XXXXXXXXXXXXXXXXX
-  <%= projectName %>:availabilityZone: ap-southeast-1c
+  <%= projectName %>:ami: <%= ami %>
+  <%= projectName %>:availabilityZone: <%= availabilityZone %>
   <%= projectName %>:disableApiTermination: false
   <%= projectName %>:ebsProject: <%= prefix %>-aws-ebs
   <%= projectName %>:eipProject: <%= prefix %>-aws-eip
   <%= projectName %>:instanceProfileProject: <%= prefix %>-aws-instance-profile
-  <%= projectName %>:instanceType: t3.small
+  <%= projectName %>:instanceType: <%= size %>
   <%= projectName %>:keyName: KEYNAME
   <%= projectName %>:keypairsProject: <%= prefix %>-aws-ssh-keypairs
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
@@ -14,5 +14,4 @@ config:
   <%= projectName %>:rootBlockDeviceSize: 20
   <%= projectName %>:securityGroupProject: <%= prefix %>-aws-security-group
   <%= projectName %>:subnetId: subnet-XXXXXXXXXXXXXXXX
-  <%= projectName %>:suffix: "20240922"
   <%= projectName %>:vpcProject: <%= prefix %>-aws-vpc
