fix(aws/ebs): fix ebs generator

--- a/generators/aws-ebs/templates/aws-ebs/Pulumi.stack.yaml
+++ b/generators/aws-ebs/templates/aws-ebs/Pulumi.stack.yaml
@@ -1,6 +1,5 @@
 config:
-  <%= projectName %>:availabilityZones: 
-    - <%= availabilityZones %>
+  <%= projectName %>:availabilityZone: <%= availabilityZone %>
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
