--- a/generators/aws-ebs/templates/aws-ebs/Pulumi.stack.yaml
+++ b/generators/aws-ebs/templates/aws-ebs/Pulumi.stack.yaml
@@ -1,8 +1,5 @@
 config:
-  <%= projectName %>:availabilityZones: 
-    - ap-southeast-1a
-    - ap-southeast-1b
-    - ap-southeast-1c
+  <%= projectName %>:availabilityZone: <%= availabilityZone %>
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
