--- a/generators/aws-security-group/templates/aws-security-group/Pulumi.stack.yaml
+++ b/generators/aws-security-group/templates/aws-security-group/Pulumi.stack.yaml
@@ -2,4 +2,4 @@ config:
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
-  <%= projectName %>:vpcProject: <%= prefix %>-vpc
+  <%= projectName %>:vpcStack: <%= prefix %>-vpc
