--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
@@ -19,4 +19,4 @@ config:
   #    -
   #    -
   #  aws-nfs-server:volumeId: 
-  <%= projectName %>:vpcProject: <%= prefix %>-vpc
+  <%= projectName %>:vpcStack: <%= prefix %>-vpc
