chore: using getouputs, AZ changes

--- a/generators/aws-swarm-workers/templates/aws-swarm-workers/Pulumi.stack.yaml
+++ b/generators/aws-swarm-workers/templates/aws-swarm-workers/Pulumi.stack.yaml
@@ -1,20 +1,19 @@
 config:
   <%= projectName %>:ami: ami-XXXXXXXXXXXXXXXXX
-  <%= projectName %>:availabilityZone: ap-southeast-1c
   <%= projectName %>:count: <%= count %>
   <%= projectName %>:disableApiTermination: false
-  <%= projectName %>:instanceProfileProject: <%= prefix %>-aws-instance-profile
+  <%= projectName %>:iamInstanceProfile: <%= prefix %>-instance-profile
   <%= projectName %>:instanceType: t4g.small
   <%= projectName %>:keyName: <%= keyName %>
-  <%= projectName %>:keypairsProject: <%= prefix %>-aws-ssh-keypairs
+  <%= projectName %>:keypairsStack: <%= prefix %>-ssh-keypairs
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
   <%= projectName %>:rootBlockDeviceSize: 20
   #  aws-nfs-server:securityGroupId: 
-  <%= projectName %>:securityGroupProject: <%= prefix %>-aws-security-group
+  <%= projectName %>:securityGroupStack: <%= prefix %>-security-group
   <%= projectName %>:subnetId: subnet-XXXXXXXXXXXXXXXX
   #  aws-nfs-server:tags:
   #    -
   #    -
-  <%= projectName %>:vpcProject: <%= prefix %>-aws-vpc
+  <%= projectName %>:vpcStack: <%= prefix %>-aws-vpc
