--- a/generators/ansible-aws/templates/ansible/stack/requirements.yml
+++ b/generators/ansible-aws/templates/ansible/stack/requirements.yml
@@ -1,9 +1,6 @@
-- src: https://github.com/dzangolab/ansible-docker-portainer
-  version: "1.3"
-  name: dzangolab.docker_portainer
-- src: https://github.com/dzangolab/ansible-docker-traefik
-  version: "4.4"
-  name: dzangolab.docker_traefik
+collections:
+  - name: dzangolab.ansible
+    version: ">=0.3.1"
 - src: https://github.com/vlcty/ansible-systemd-timers
   version: master
   name: victy.ansible-systemd-timers
