--- a/generators/ansible-aws/templates/ansible/stack/plays/portainer.yml
+++ b/generators/ansible-aws/templates/ansible/stack/plays/portainer.yml
@@ -1,5 +1,24 @@
 ---
-- name: Deploy portainer
-  hosts: all
-  roles:
-    - role: dzangolab.docker_portainer
+- name: Create required portainer directories on the NFS server
+  hosts: nfs_server
+  become: yes
+  tasks:
+    - name: Ensure necessary directories exist
+      file:
+        group: "nogroup"
+        owner: "nobody"
+        path: "/mnt/nfs/{{ item }}"
+        state: directory
+        recurse: true
+      with_items:
+        - "portainer"
+      when:
+        - nfs
+
+- name: Deploy Portainer
+  hosts: portainer
+  become: true
+  tasks:
+    - name: Deploy Portainer
+      ansible.builtin.import_role:
+        name: dzangolab.ansible.docker_portainer
