--- a/generators/ansible-aws/templates/ansible/stack/plays/traefik.yml
+++ b/generators/ansible-aws/templates/ansible/stack/plays/traefik.yml
@@ -1,21 +1,44 @@
 ---
-- name: Get secrets
-  hosts: all
+- name: Create required traefik directories and files on the NFS server
+  hosts: nfs_server
+  become: yes
   tasks:
-    - shell: "aws secretsmanager get-secret-value --output text --query SecretString --secret-id {{ aws_secrets_id }}"
-      delegate_to: 127.0.0.1
-      register: secrets
+    - name: Ensure necessary directories exist
+      file:
+        group: "nogroup"
+        owner: "nobody"
+        path: "/mnt/nfs/{{ item }}"
+        state: directory
+        recurse: true
+      with_items:
+        - "traefik/acme"
+        - "traefik/log"
+      when:
+        - nfs
 
-- name: Compute traefik htpasswd
-  hosts: traefik
-  tasks:
-    - shell: "htpasswd -bn admin \"{{ (secrets.stdout | from_json)[\"traefik-dashboard-password\"] }}\" | sed -e 's/\\$/\\$\\$/g'"
-      delegate_to: 127.0.0.1
-      register: traefik_dashboard_basicauth_password
+    - name: Create an empty acme.json
+      file:
+        path: "/mnt/nfs/traefik/acme/acme.json"
+        state: touch
+        owner: "nobody"
+        group: "nogroup"
+        mode: "0600"
+      when:
+        - nfs
 
 - name: Deploy traefik
   hosts: traefik
-  roles:
-    - role: dzangolab.docker_traefik
-  vars:
-    traefik__dashboard_basicauth_passwords: ["{{ traefik_dashboard_basicauth_password.stdout }}"]
+  tasks:
+    - name: Get secrets
+      shell: "aws secretsmanager get-secret-value --output text --query SecretString --secret-id {{ aws_secrets_id }}"
+      delegate_to: 127.0.0.1
+      register: secrets
+    - name: Compute traefik htpasswd
+      shell: "htpasswd -bn admin \"{{ (secrets.stdout | from_json)[\"traefik-dashboard-password\"] }}\" | sed -e 's/\\$/\\$\\$/g'"
+      delegate_to: 127.0.0.1
+      register: traefik_dashboard_basicauth_password
+    - name: Deploy traefik
+      ansible.builtin.import_role:
+        name: dzangolab.ansible.docker_traefik
+      vars:
+        traefik__dashboard_basicauth_passwords: ["{{ traefik_dashboard_basicauth_password.stdout }}"]
