fix(aws/ansible): update traefik and portainer versions

--- a/generators/ansible-aws/templates/ansible/stack/inventory/group_vars/portainer.yml
+++ b/generators/ansible-aws/templates/ansible/stack/inventory/group_vars/portainer.yml
@@ -5,3 +5,4 @@ portainer__domain: "portainer.{{ domain }}"
 portainer__label: "portainer"
 portainer__network: "{{ network_traefik }}"
 portainer__state: "started"
+portainer__version: 2.27.4
