--- a/generators/ansible-aws/templates/ansible/stack/makefile
+++ b/generators/ansible-aws/templates/ansible/stack/makefile
@@ -13,27 +13,27 @@ install:
 	ansible-galaxy install -r requirements.yml --force
 
 docker:
-	@printf "\033[0;3ansible/2m>>> Set up docker swarm\033[0m\n"
+	@printf "\033[0;32m>>> Set up docker swarm\033[0m\n"
 	ansible-playbook plays/docker.yml
 
 docker.cron:
-	@printf "\033[0;3ansible/2m>>> Set up docker logrotate\033[0m\n"
+	@printf "\033[0;32m>>> Set up docker logrotate\033[0m\n"
 	ansible-playbook plays/docker.yml --tags "docker-cron"
 
 docker.labels:
-	@printf "\033[0;3ansible/2m>>> Set up docker labels\033[0m\n"
+	@printf "\033[0;32m>>> Set up docker labels\033[0m\n"
 	ansible-playbook plays/docker.yml --tags "docker-labels"
 
 docker.networks:
-	@printf "\033[0;3ansible/2m>>> Set up docker network\033[0m\n"
+	@printf "\033[0;32m>>> Set up docker network\033[0m\n"
 	ansible-playbook plays/docker.yml --tags "docker-networks"
 
 docker.swarm:
-	@printf "\033[0;3ansible/2m>>> Set up docker swarm\033[0m\n"
+	@printf "\033[0;32m>>> Set up docker swarm\033[0m\n"
 	ansible-playbook plays/swarm.yml
 
 portainer:
-	@printf "\033[0;3ansible/2m>>> Set up portainer\033[0m\n"
+	@printf "\033[0;32m>>> Set up portainer\033[0m\n"
 	ansible-playbook plays/portainer.yml
 
 portainer.down:
@@ -41,11 +41,11 @@ portainer.down:
 	ansible-playbook plays/portainer.yml --extra-vars="portainer__state=stopped"
 
 ssh-keys:
-	@printf "\033[0;3ansible/2m>>> Update SSH keys\033[0m\n"
+	@printf "\033[0;32m>>> Update SSH keys\033[0m\n"
 	ansible-playbook plays/ssh-keys.yml
 
 traefik:
-	@printf "\033[0;3ansible/2m>>> Set up traefik\033[0m\n"
+	@printf "\033[0;32m>>> Set up traefik\033[0m\n"
 	ansible-playbook plays/traefik.yml
 
 traefik.down:
