fix(do/ansible): fix makefile

--- a/generators/ansible-do/templates/ansible/stack/makefile
+++ b/generators/ansible-do/templates/ansible/stack/makefile
@@ -1,31 +1,31 @@
 #!make
 
 awscli:
-	@printf "\033[0;3ansible/2m>>> Set up awscli\033[0m\n"
+	@printf "\033[0;32m>>> Set up awscli\033[0m\n"
 	ansible-playbook plays/awscli.yml --tags "awscli"
 
 docker:
-	@printf "\033[0;3ansible/2m>>> Set up docker swarm\033[0m\n"
+	@printf "\033[0;32m>>> Set up docker swarm\033[0m\n"
 	ansible-playbook plays/docker.yml
 
 docker.cron:
-	@printf "\033[0;3ansible/2m>>> Set up docker logrotate\033[0m\n"
+	@printf "\033[0;32m>>> Set up docker logrotate\033[0m\n"
 	ansible-playbook plays/docker.yml --tags "cron"
 
 docker.labels:
-	@printf "\033[0;3ansible/2m>>> Set up docker labels\033[0m\n"
+	@printf "\033[0;32m>>> Set up docker labels\033[0m\n"
 	ansible-playbook plays/docker.yml --tags "labels"
 
 docker.logrotate:
-	@printf "\033[0;3ansible/2m\>>> Set up docker logrotate\033[0m\n"
+	@printf "\033[0;32m\>>> Set up docker logrotate\033[0m\n"
 	ansible-playbook plays/docker.yml --tags "logrotate"
 
 docker.networks:
-	@printf "\033[0;3ansible/2m>>> Set up docker networks\033[0m\n"
+	@printf "\033[0;32m>>> Set up docker networks\033[0m\n"
 	ansible-playbook plays/docker.yml --tags "networks"
 
 docker.swarm:
-	@printf "\033[0;3ansible/2m>>> Set up docker swarm\033[0m\n"
+	@printf "\033[0;32m>>> Set up docker swarm\033[0m\n"
 	ansible-playbook plays/swarm.yml
 
 install:
@@ -33,11 +33,11 @@ install:
 	ansible-galaxy install -r requirements.yml --force
 
 mariadb:
-	@printf "\033[0;3ansible/2m>>> Set up mariadb data folders\033[0m\n"
+	@printf "\033[0;32m>>> Set up mariadb data folders\033[0m\n"
 	ansible-playbook plays/mariadb.yml
 
 portainer:
-	@printf "\033[0;3ansible/2m>>> Set up portainer\033[0m\n"
+	@printf "\033[0;32m>>> Set up portainer\033[0m\n"
 	ansible-playbook plays/portainer.yml
 
 portainer.down:
@@ -45,15 +45,15 @@ portainer.down:
 	ansible-playbook plays/portainer.yml --extra-vars="portainer__state=stopped"
 
 postgres:
-	@printf "\033[0;3ansible/2m>>> Set up postgres data folders\033[0m\n"
+	@printf "\033[0;32m>>> Set up postgres data folders\033[0m\n"
 	ansible-playbook plays/postgres.yml
 
 ssh-keys:
-	@printf "\033[0;3ansible/2m>>> Update SSH keys\033[0m\n"
+	@printf "\033[0;32m>>> Update SSH keys\033[0m\n"
 	ansible-playbook plays/ssh-keys.yml
 
 traefik:
-	@printf "\033[0;3ansible/2m>>> Set up traefik\033[0m\n"
+	@printf "\033[0;32m>>> Set up traefik\033[0m\n"
 	ansible-playbook plays/traefik.yml
 
 traefik.down:
