fix: fixing some problems

--- a/generators/ansible-aws/templates/ansible/stack/requirements.yml
+++ b/generators/ansible-aws/templates/ansible/stack/requirements.yml
@@ -1,6 +1,8 @@
 collections:
   - name: dzangolab.ansible
     version: ">=0.3.1"
-- src: https://github.com/vlcty/ansible-systemd-timers
-  version: master
-  name: victy.ansible-systemd-timers
+
+roles:
+  - name: victy.ansible-systemd-timers
+    src: https://github.com/vlcty/ansible-systemd-timers
+    version: master
