--- a/generators/ansible-aws/templates/ansible/stack/ansible.cfg
+++ b/generators/ansible-aws/templates/ansible/stack/ansible.cfg
@@ -2,7 +2,7 @@
 ansible_python_interpreter = /usr/bin/python3
 host_key_auto_add = True
 host_key_checking = False
-inventory = ./inventory
+inventory = ./hosts
 remote_user = ec2-user
 retry_files_save_path = ./.ansible-retry
 roles_path = ./roles
