fix: correcting ansible

--- a/generators/ansible-aws/templates/ansible/stack/group_vars/traefik.yml
+++ b/generators/ansible-aws/templates/ansible/stack/group_vars/traefik.yml
@@ -5,5 +5,5 @@ traefik__deploy_user: "{{ deploy_user }}"
 traefik__domain: "traefik.{{ domain }}"
 traefik__image: "traefik:v3.3.6"
 traefik__label: "traefik"
-traefik__network: "{{ network_traefik }}"
+traefik__network: "{{ network_public }}"
 traefik__state: "started"
