--- a/generators/ansible-aws/templates/ansible/stack/plays/portainer.yml
+++ b/generators/ansible-aws/templates/ansible/stack/plays/portainer.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Ensure necessary directories exist
       file:
-        group: "nogroup"
+        group: "nobody"
         owner: "nobody"
         path: "/mnt/nfs/{{ item }}"
         state: directory
