--- a/generators/ansible-aws/templates/ansible/stack/group_vars/all.yml
+++ b/generators/ansible-aws/templates/ansible/stack/group_vars/all.yml
@@ -1,15 +1,26 @@
+aws_secrets_id:
+
 deploy_dir: /mnt/data
 deploy_group: adm
 deploy_user: ec2-user
 
 domain: <%= domain %>
 
+mariadb_versions:
+  - 11
+  
 minio_enabled: false
 
 network_private: private
-network_traefik: public
+network_public: public
 
-postgres_version: 16
+nfs: false
+nfs_server_ip:
+
+postgres_versions:
+  - 17
+  - 16
+  - 15
 
 ssh_key_folder: ../../../../global/ssh-keys
 ssh_keys:
