--- a/generators/ansible-aws/templates/ansible/stack/plays/swarm.yml
+++ b/generators/ansible-aws/templates/ansible/stack/plays/swarm.yml
@@ -43,7 +43,7 @@
         timeout: 60
         advertise_addr: enp0s8:2377
         join_token: "{{ hostvars[groups['swarm_managers'][0]]['__output_swarm']['swarm_facts']['JoinTokens']['Manager']}}"
-        remote_addrs: "{{ groups['swarm_managers'][0] }}"
+        remote_addrs: "{{ hostvars[groups['swarm_managers'][0]]['private_ip'] }}:2377"
       when: inventory_hostname in groups['swarm_managers'] and inventory_hostname not in groups['swarm_managers'][0]
 
 - name: Join workers
@@ -55,6 +55,6 @@
         timeout: 60
         advertise_addr: enp0s8:2377
         join_token: "{{ hostvars[groups['swarm_managers'][0]]['__output_swarm']['swarm_facts']['JoinTokens']['Worker'] }}"
-        remote_addrs: "{{ groups['swarm_managers'][0] }}"
+        remote_addrs: "{{ hostvars[groups['swarm_managers'][0]]['private_ip'] }}:2377"
       when: inventory_hostname in groups['swarm_workers']
     
