chore: adding useNfs to swarm leader

--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
@@ -20,3 +20,4 @@ config:
   <%= projectName %>:subnetId: subnet-XXXXXXXXXXXXXXXX
 #  <%= projectName %>:volumeId:
   <%= projectName %>:volumeStack: <%= prefix %>-vpc
+  <%= projectName %>:useNfs: <%= useNfs %>
