chore: update getOutputs

--- a/generators/aws-route53/templates/aws-route53/Pulumi.stack.yaml
+++ b/generators/aws-route53/templates/aws-route53/Pulumi.stack.yaml
@@ -2,6 +2,8 @@ config:
   <%= projectName %>:aliases: 
     - "*"
   <%= projectName %>:domain: <%= domain %>
+  <%= projectName %>:ipStack: 
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
+  <%= projectName %>:swarmLeaderStack: swarm-leader
