--- a/generators/ansible-aws/templates/ansible/stack/plays/postgres.yml
+++ b/generators/ansible-aws/templates/ansible/stack/plays/postgres.yml
@@ -4,9 +4,9 @@
   tasks:
     - name: Ensure required postgres directories exist
       file:
-        group: "nogroup"
+        group: "nobody"
         owner: "nobody"
-        path: "{{ postgres_data_dir }}{{ item.0 }}/{{ item.1 }}"
+        path: "/mnt/nfs/postgres/{{ item.0 }}/{{ item.1 }}"
         state: directory
         recurse: true
       with_nested:
@@ -26,7 +26,7 @@
     - file:
         group: "{{ deploy_group }}"
         owner: "{{ deploy_user }}"
-        path: "{{ postgres_data_dir }}{{ item.0 }}/{{ item.1 }}"
+        path: "{{ item.0 }}/{{ item.1 }}"
         state: directory
         recurse: true
       with_nested:
@@ -48,5 +48,6 @@
     - name: label_node
       command: "docker node update --label-add postgres=true {{ node_id.stdout }}"
       ignore_errors: yes
+      delegate_to: swarm_leader
   tags:
-    - labels
+    - docker-labels
