--- a/generators/ansible-aws/templates/ansible/stack/group_vars/portainer.yml
+++ b/generators/ansible-aws/templates/ansible/stack/group_vars/portainer.yml
@@ -3,5 +3,6 @@ portainer__deploy_group: "{{ deploy_group }}"
 portainer__deploy_user: "{{ deploy_user }}"
 portainer__domain: "portainer.{{ domain }}"
 portainer__label: "portainer"
-portainer__network: "{{ network_traefik }}"
+portainer__network: "{{ network_public }}"
 portainer__state: "started"
+portainer__version: 2.27.4
