--- a/generators/aws-swarm-nodes/templates/aws-swarm-nodes/Pulumi.yaml
+++ b/generators/aws-swarm-nodes/templates/aws-swarm-nodes/Pulumi.yaml
@@ -3,4 +3,4 @@ runtime:
   name: nodejs
   options:
     typescript: true
-description: Provisions Docker swarm nodes on AWS
+description: Provisions Docker swarm worker nodes on AWS
