fix(aws-instance-profile): add profileName and rolename variables to stack config template

--- a/generators/aws-instance-profile/templates/aws-instance-profile/Pulumi.stack.yaml
+++ b/generators/aws-instance-profile/templates/aws-instance-profile/Pulumi.stack.yaml
@@ -1,5 +1,7 @@
 config:
   <%= projectName %>:managedPolicyArns: 
     - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
+  <%= projectName %>:profileName: NAME
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
+  <%= projectName %>:roleName: NAME
