--- a/generators/aws-swarm-workers/templates/aws-swarm-workers/Pulumi.stack.yaml
+++ b/generators/aws-swarm-workers/templates/aws-swarm-workers/Pulumi.stack.yaml
@@ -1,5 +1,6 @@
 config:
   <%= projectName %>:ami: ami-XXXXXXXXXXXXXXXXX
+  <%= projectName %>:associatePublicIpAddress: false
   <%= projectName %>:availabilityZone: <%= availabilityZone %>
   <%= projectName %>:count: <%= count %>
   <%= projectName %>:disableApiTermination: false
