chore: update nfs on portainer and traefik

--- a/generators/ansible-aws/templates/ansible/stack/group_vars/traefik.yml
+++ b/generators/ansible-aws/templates/ansible/stack/group_vars/traefik.yml
@@ -6,4 +6,6 @@ traefik__domain: "traefik.{{ domain }}"
 traefik__image: "traefik:v3.3.6"
 traefik__label: "traefik"
 traefik__network: "{{ network_public }}"
+traefik__nfs_ip: "{{ nfs_server_ip }}"
 traefik__state: "started"
+traefik__use_nfs: "{{ nfs }}"
