feat(aws./swarm-leader): update aws swarm leader generator
* remove security group; security groups should be provisioned
via the `aws-swarm-security-groups` generator
* update cloud-config for Amazon Linux 2023:
  * add additional ssh keys
  * init docker swarm with maximum cidr

--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
@@ -13,6 +13,8 @@ config:
   <%= projectName %>:keypairsStack: <%= prefix %>-ssh-keypairs/global
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
+#  <%= projectName %>:publicKeynames:
+#    - 
   <%= projectName %>:retainOnDelete: false
   <%= projectName %>:rootBlockDeviceSize: 20
 #  <%= projectName %>:securityGroupId:
