--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.yaml
@@ -3,4 +3,4 @@ runtime:
   name: nodejs
   options:
     typescript: true
-description: Provisions Docker swarm leader and associated resources on AWS
+description: Provisions Docker swarm leader and initializes swarm
