feat(aws/ansible): update default interpreter

--- a/generators/ansible-aws/templates/ansible/stack/ansible.cfg
+++ b/generators/ansible-aws/templates/ansible/stack/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
-ansible_python_interpreter = /usr/bin/python3
 host_key_auto_add = True
 host_key_checking = False
+interpreter_python = /usr/bin/python3
 inventory = ./hosts
 remote_user = ec2-user
 retry_files_save_path = ./.ansible-retry
