--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
@@ -2,6 +2,8 @@ config:
   <%= projectName %>:ami: <%= ami %>
   <%= projectName %>:availabilityZone: <%= availabilityZone %>
   <%= projectName %>:disableApiTermination: false
+  <%= projectName %>:dockerNetworks: <% networks.forEach((network) => { %>
+    - <%= network %><% }); %>
 #  <%= projectName %>:eip: 
 #  <%= projectName %>:eipId: 
   <%= projectName %>:eipStack: <%= prefix %>-eip
@@ -22,4 +24,4 @@ config:
   <%= projectName %>:subnetId: subnet-XXXXXXXXXXXXXXXX
 #  <%= projectName %>:volumeId:
   <%= projectName %>:volumeStack: <%= prefix %>-vpc
-  <%= projectName %>:useNfs: <%= useNfs %>
+  <%= projectName %>:useNfs: <%= useNFS %>
