fix(aws/credentials): fix special characters in postgres password
supertokens does not like braces in postgres password

--- a/generators/aws-credentials/templates/aws-credentials/Pulumi.stack.yaml
+++ b/generators/aws-credentials/templates/aws-credentials/Pulumi.stack.yaml
@@ -5,7 +5,9 @@ config:
     # mariadb-root: {}
     # minio-root: {}
     # nocodb: {}
-    # postgres: {}
+    # postgres: {
+    #  overrideSpecial: "!@#$%&*()-_=+[]<>:?"
+    # }
     # traefik-dashboard: {
     #  special: false
     # }    
