chore: update nfs on portainer and traefik (#136)
Co-authored-by: Anthony Phothirath <anthony.phothirath@hotmail.com>
Co-authored-by: Olivier Pichon <op@dzango.com>

--- a/generators/ansible-aws/templates/ansible/stack/inventory/group_vars/traefik.yml
+++ b/generators/ansible-aws/templates/ansible/stack/inventory/group_vars/traefik.yml
@@ -4,4 +4,6 @@ traefik__deploy_group: "{{ deploy_group }}"
 traefik__deploy_user: "{{ deploy_user }}"
 traefik__domain: "traefik.{{ domain }}"
 traefik__network: "{{ network_public }}"
+traefik__nfs: "{{ nfs }}"
+traefik__nfs_ip: "{{ nfs_server_ip }}"
 traefik__state: "started"
