--- a/generators/aws-swarm-workers-asg/templates/aws-swarm-workers-asg/Pulumi.stack.yaml
+++ b/generators/aws-swarm-workers-asg/templates/aws-swarm-workers-asg/Pulumi.stack.yaml
@@ -1,24 +1,21 @@
 config:
   <%= projectName %>:ami: ami-XXXXXXXXXXXXXXXXX
   <%= projectName %>:associatePublicIpAddress: false
+  <%= projectName %>:capacityDesired: 1
+  <%= projectName %>:capacityMax: 1
+  <%= projectName %>:capacityMin: 1
   <%= projectName %>:disableApiTermination: false
   <%= projectName %>:iamInstanceProfileStack: <%= prefix %>-instance-profile
   <%= projectName %>:instanceType: <%= instanceType %>
   <%= projectName %>:leaderStack: <%= prefix %>-leader
   <%= projectName %>:keyName: <%= keyName %>
   <%= projectName %>:keypairsStack: <%= prefix %>-ssh-keypairs
-  <%= projectName %>:maxSizeA: <%= maxSizeA %>
-  <%= projectName %>:maxSizeB: <%= maxSizeB %>
-  <%= projectName %>:maxSizeC: <%= maxSizeC %>
-  <%= projectName %>:minSizeA: <%= minSizeA %>
-  <%= projectName %>:minSizeB: <%= minSizeB %>
-  <%= projectName %>:minSizeC: <%= minSizeC %>
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:pathToSshKeysFolder: ../../ssh-keys
   <%= projectName %>:protect: "false"
   <%= projectName %>:publicKeyNames:
     # - 
   <%= projectName %>:retainOnDelete: "false"
-  <%= projectName %>:rootBlockDeviceSize: "20"
-  <%= projectName %>:securityGroupStack: <%= prefix %>-security-groups
+  <%= projectName %>:rootBlockDeviceSize: "16"
+  # <%= projectName %>:securityGroupStack: <%= prefix %>-security-groups
   <%= projectName %>:vpcStack: <%= prefix %>-vpc
